--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.4.0",
     "core-js": "^3.6.4",
+    "random-words": "^1.1.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
