--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.4",
     "random-words": "^1.1.0",
     "vue": "^2.6.11",
+    "vue-eva-icons": "^1.1.1",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
