--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "random-words": "^1.1.0",
     "vue": "^2.6.11",
     "vue-eva-icons": "^1.1.1",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
